# Proyecto-Final-ADA-

./: CMakeLists.txt  DyslexiaLogic.cpp  DyslexiaLogic.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp  prueba.txt  pruebaKMPAplicacion.cpp
pruebas/: prueba_modo_espejo.txt  prueba_modo_fonetico.txt  prueba_modo_formas.txt  prueba_modo_vertical.txt
